Made the frontend for protected itemtag functionality
